--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,17 @@
+spring.mvc.view.prefix = /views/
+spring.mvc.view.suffix = .html
 # ===============================
-# DATABASE
+# DATABASE ORACLE SERVER
 # ===============================
  
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@10.0.3.3:1521:ehosora
+spring.datasource.username=nhitw
+spring.datasource.password=123
  
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:db12c
-spring.datasource.username=Test
-spring.datasource.password=12345
+# ===============================
+# JPA / HIBERNATE
+# =============================== 
+spring.jpa.hibernate.dialect=org.hibernate.dialect.Oracle12cDialect
+spring.jpa.hibernate.ddl-auto = none
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
